log
Wed 15 May 2024 05:13:36 PM UTC: 
 tests:  0|5
total_score: 0/70
29e4124
Wed 15 May 2024 05:30:59 PM UTC: 
 sudoku.c | 43 +++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 43 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:18: error: unused variable ‘num’ [-Werror=unused-variable]
   47 |    int i, j , k, num;
      |                  ^~~
cc1: all warnings being treated as errors
Compilation failed
3c7a399
Wed 15 May 2024 05:31:31 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
cdcd22c
